# open-ant

./: README.md  linux-deploy.md  pyproject.toml
ant/: BOOTSTRAP.md
ant/channel/: __init__.py  base.py  discord_channel.py  telegram_channel.py
ant/cli/: __init__.py  chat.py  ingest.py  main.py  server.py
ant/core/: __init__.py  agent.py  agent_loader.py  confirmation.py  context.py  context_guard.py  cron_loader.py  eventbus.py  events.py  guardrails.py  history.py  memory_guard.py  memory_retriever.py  prompt_builder.py  routing.py  sandbox.py  session_fsm.py  session_state.py  skill_loader.py  stream_pipeline.py  stream_stages.py  tracer.py
ant/core/commands/: __init__.py  base.py  handlers.py  registry.py
ant/provider/llm/: __init__.py  base.py
ant/provider/memory/: __init__.py  base.py  chroma_store.py  doc_ingester.py  embedding.py  sentence_transformer.py
ant/provider/web_read/: __init__.py  base.py  crawl4ai.py  langchain_loader.py
ant/provider/web_search/: __init__.py  base.py  brave.py  tavily.py
ant/server/: __init__.py  agent_worker.py  app.py  channel_worker.py  cron_worker.py  delivery_worker.py  server.py  websocket_worker.py  worker.py
ant/server/static/: index.html
ant/tools/: __init__.py  base.py  builtin_tools.py  doc_ingest_tool.py  policy.py  post_message_tool.py  registry.py  retriever_knowledge_tool.py  skill_tool.py  subagent_tool.py  webread_tool.py  websearch_tool.py
ant/utils/: __init__.py  config.py  def_loader.py  logging.py
sandbox/: Dockerfile  entrypoint.sh
