[project]
name = "open-ant"
version = "0.1.0"
description = "Harness-engineering multi-agent runtime"
requires-python = ">=3.11"

dependencies = [
    "litellm>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "watchdog>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ant"]

[project.scripts]
open-ant = "ant.cli.main:app"
